@@ -1,6 +1,7 @@
 0.16.2
 	bugfix: IP address picker was broken
 	bugfix: more message processing fixes
+	bugfix: work around some NET-SNMP builds (reported by Walery Wysotsky)
 	new feature: "router" addresses allocations
 	new feature: support for local extensions
 	new feature: IPv4 networks hierarchy
